@@ -1,10 +1,97 @@
-# $Id: xmlrpc.rb,v 1.6 2005-09-29 03:01:15 fdiary Exp $
+# $Id: xmlrpc.rb,v 1.7 2005-10-15 07:31:42 znz Exp $
 
 require 'xmlrpc/server'
 require 'hiki/plugin'
 
 module Hiki
+  module XMLRPCHandler
+    private
+    def init_handler
+      @server.add_handler('wiki.getPage') do |page|
+        page = utf8_to_euc( page )
+        conf = Hiki::Config::new
+        db = Hiki::HikiDB::new( conf )
+        ret = db.load( page )
+        unless ret
+          raise XMLRPC::FaultException.new(1, "No such page was found.")
+        end
+        XMLRPC::Base64.new( euc_to_utf8( ret ) )
+      end
+
+      @server.add_handler('wiki.getPageInfo') do |page|
+        page = utf8_to_euc( page )
+        conf = Hiki::Config::new
+        db = Hiki::HikiDB::new( conf )
+        title = db.get_attribute( page, :title )
+        title = page if title.nil? || title.empty?
+        {
+          'title' => XMLRPC::Base64.new( euc_to_utf8( title ) ),
+          'keyword' => db.get_attribute( page, :keyword ).collect { |k| XMLRPC::Base64.new( euc_to_utf8( k ) ) },
+          'md5hex' => db.md5hex( page ),
+          'lastModified' => db.get_attribute( page, :last_modified ).getutc,
+          'author' => XMLRPC::Base64.new( db.get_attribute( page, :editor ) || '' )
+        }
+      end
+
+      @server.add_handler('wiki.putPage') do |page, content, attributes|
+        page = utf8_to_euc( page )
+        content = utf8_to_euc( content )
+        attributes ||= {}
+        attributes.each_pair { |k, v|
+          case v
+          when String
+            v.replace( utf8_to_euc( v ) )
+          when Array
+            v.map!{ |s| s.replace( utf8_to_euc( s ) ) }
+          end
+        }
+        conf = Hiki::Config::new
+        cgi = CGI::new
+        cgi.params['c'] = ['save']
+        cgi.params['p'] = [page]
+        db = Hiki::HikiDB::new( conf )
+        options = conf.options || Hash::new( '' )
+        options['page'] = page
+        options['cgi']  = cgi
+        options['db']  = db
+        options['params'] = Hash::new( [] )
+        plugin = Hiki::Plugin::new( options, conf )
+        plugin.login( attributes['name'], attributes['password'] )
+
+        unless plugin.editable?( page )
+          raise XMLRPC::FaultException.new(10, "can't edit this page.")
+        end
+
+        md5hex = attributes['md5hex'] || db.md5hex( page )
+        update_timestamp = !attributes['minoredit']
+        unless plugin.save( page, content.gsub( /\r/, '' ), md5hex, update_timestamp )
+          raise XMLRPC::FaultException.new(11, "save failed.")
+        end
+        keyword = attributes['keyword'] || db.get_attribute( page, :keyword )
+        title = attributes['title']
+        attr = [[:keyword, keyword.uniq], [:editor, plugin.user]]
+        attr << [:title, title] if title
+        db.set_attribute(page, attr)
+        if plugin.admin? && attributes.has_key?( 'freeze' )
+          db.freeze_page( page, attributes['freeze'] ? true : false)
+        end
+        true
+      end
+
+      @server.add_handler('wiki.getAllPages') do
+        conf = Hiki::Config::new
+        db = Hiki::HikiDB::new( conf )
+        db.pages.collect{|p| XMLRPC::Base64.new( euc_to_utf8( p ) )}
+      end
+
+      #add_multicall
+      #add_introspection
+    end
+  end
+
   class XMLRPCServer
+    include XMLRPCHandler
+
     def initialize(xmlrpc_enabled)
       if defined?(MOD_RUBY)
         @server = XMLRPC::ModRubyServer.new
@@ -17,94 +104,6 @@ module Hiki
 
     def serve
       @server.serve
-    end
-
-    private
-    def init_handler
-      @server.add_handler('wiki.getPage') do |page|
-        page = utf8_to_euc( page )
-        conf = Hiki::Config::new
-        db = Hiki::HikiDB::new( conf )
-        begin
-          ret = XMLRPC::Base64.new( euc_to_utf8( db.load( page ) || '' ) )
-        rescue
-          STDERR.puts $!, $@.inspect
-          ret = false
-        end
-        ret
-      end
-
-      @server.add_handler('wiki.getPageInfo') do |page|
-        page = utf8_to_euc( page )
-        conf = Hiki::Config::new
-        db = Hiki::HikiDB::new( conf )
-        begin
-          title = db.get_attribute( page, :title )
-          title = page if title.nil? || title.empty?
-          ret = {
-            'title' => XMLRPC::Base64.new( euc_to_utf8( title ) ),
-            'keyword' => db.get_attribute( page, :keyword ).collect { |k| XMLRPC::Base64.new( euc_to_utf8( k ) ) },
-            'lastModified' => db.get_attribute( page, :last_modified ).getutc,
-            'author' => XMLRPC::Base64.new( db.get_attribute( page, :editor ) || '' )
-          }
-        rescue
-          STDERR.puts $!, $@.inspect
-          ret = false
-        end
-        ret
-      end
-
-      @server.add_handler('wiki.putPage') do |page, content, attributes|
-        page = utf8_to_euc( page )
-        content = utf8_to_euc( content )
-        attributes ||= {}
-        attributes.each_pair { |k, v| v.replace( utf8_to_euc( v ) ) }
-        conf = Hiki::Config::new
-        cgi = CGI::new
-        cgi.params['c'] = ['save']
-        cgi.params['p'] = [page]
-        db = Hiki::HikiDB::new( conf )
-        begin
-          options = conf.options || Hash::new( '' )
-          options['page'] = page
-          options['cgi']  = cgi
-          options['db']  = db
-          options['params'] = Hash::new( [] )
-          plugin = Hiki::Plugin::new( options, conf )
-          plugin.login( attributes['name'], attributes['password'] )
-
-          raise "can't edit this page." unless plugin.editable?( page )
-
-          md5hex = db.md5hex( page )
-          plugin.save( page, content.gsub( /\r/, '' ), md5hex )
-          keyword = attributes['keyword'] || []
-          title = attributes['title']
-          attr = [[:keyword, keyword.uniq], [:editor, plugin.user]]
-          attr << [:title, title] if title
-          db.set_attribute(page, attr)
-          if plugin.admin? && attributes.has_key?( 'freeze' )
-            db.freeze_page( page, attributes['freeze'] ? true : false)
-          end
-          ret = true
-        rescue
-          STDERR.puts $!, $@.inspect
-          ret = false
-        end
-        ret
-      end
-
-      @server.add_handler('wiki.getAllPages') do
-        conf = Hiki::Config::new
-        db = Hiki::HikiDB::new( conf )
-        begin
-          ret = db.pages.collect{|p| XMLRPC::Base64.new( euc_to_utf8( p ) )}
-        rescue
-          STDERR.puts $!, $@.inspect
-          ret = false
-        end
-        ret
-      end
-
     end
   end
 end
